llama-runtime/build-deploy-mistral.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/DanielCasali/mma-ai
    deployment.kubernetes.io/revision: "1"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"mma-ai:latest","namespace":"ai"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mma-ai\")].image","paused":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  generation: 1
  labels:
    app: mma-ai
    app.kubernetes.io/component: mma-ai
    app.kubernetes.io/instance: mma-ai
    app.kubernetes.io/name: mma-ai
    app.kubernetes.io/part-of: mma-ai-app
  name: mma-ai
  namespace: ai
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mma-ai
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mma-ai
        deployment: mma-ai
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/ai/mma-ai:latest
          imagePullPolicy: Always
          name: mma-ai
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: llama-models
              mountPath: /models
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/DanielCasali/mma-ai
    deployment.kubernetes.io/revision: "1"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"mma-ai:latest","namespace":"ai"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mma-ai\")].image","paused":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  generation: 1
  labels:
    app: mma-ai
    app.kubernetes.io/component: mma-ai
    app.kubernetes.io/instance: mma-ai
    app.kubernetes.io/name: mma-ai
    app.kubernetes.io/part-of: mma-ai-app
  name: mma-ai
  namespace: ai
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
"mma-ai-deploy.yaml" 96L, 3022B
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/DanielCasali/mma-ai
    deployment.kubernetes.io/revision: "1"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"mma-ai:latest","namespace":"ai"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mma-ai\")].image","paused":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  generation: 1
  labels:
    app: mma-ai
    app.kubernetes.io/component: mma-ai
    app.kubernetes.io/instance: mma-ai
    app.kubernetes.io/name: mma-ai
    app.kubernetes.io/part-of: mma-ai-app
  name: mma-ai
  namespace: ai
spec:
  progressDeadlineSeconds: 600
  replicas: 1
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
              scheme: HTTP
            medium: Memory
  labels:
  strategy:
# ImageStream for the application
    app: mma-ai
              fi
            periodSeconds: 20
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/DanielCasali/mma-ai
    deployment.kubernetes.io/revision: "1"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"mma-ai:latest","namespace":"ai"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mma-ai\")].image","paused":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  generation: 1
  labels:
    app: mma-ai
    app.kubernetes.io/component: mma-ai
    app.kubernetes.io/instance: mma-ai
    app.kubernetes.io/name: mma-ai
    app.kubernetes.io/part-of: mma-ai-app
  name: mma-ai
  namespace: ai
spec:
  progressDeadlineSeconds: 600
  replicas: 1
"mma-ai-deploy.yaml" 192L, 5093B
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/DanielCasali/mma-ai
    deployment.kubernetes.io/revision: "1"
    openshift.io/generated-by: OpenShiftWebConsole
  generation: 1
  labels:
    app: mma-ai
    app.kubernetes.io/component: mma-ai
    app.kubernetes.io/instance: mma-ai
    app.kubernetes.io/name: mma-ai
    app.kubernetes.io/part-of: mma-ai-app
  name: mma-ai
  namespace: ai
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mma-ai
        deployment: mma-ai
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/ai/mma-ai:latest
          imagePullPolicy: Always
          name: mma-ai
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: llama-models
              mountPath: /models
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              else
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: llama-models
          emptyDir:
            medium: Memory
[cecuser@p1374-bastion llama-runtime]$ ls
Dockerfile                 llama-route.yaml  mistral-deploy-ready.yaml  mma-ai-deploy.yaml
granite-deploy-ready.yaml  llama-svc.yaml    mistral-deploy.yaml
[cecuser@p1374-bastion llama-runtime]$ vi mma-ai-deploy.yaml
[cecuser@p1374-bastion llama-runtime]$ vi mma-ai-deploy.yaml
[cecuser@p1374-bastion llama-runtime]$ oc apply -f mma-ai-deploy.yaml
deployment.apps/mma-ai configured
Warning: resource buildconfigs/mma-ai is missing the kubectl.kubernetes.io/last-applied-configuration annotation which is required by oc apply. oc apply should only be used on resources created declaratively by either oc create --save-config or oc apply. The missing annotation will be patched automatically.
buildconfig.build.openshift.io/mma-ai configured
Warning: resource imagestreams/mma-ai is missing the kubectl.kubernetes.io/last-applied-configuration annotation which is required by oc apply. oc apply should only be used on resources created declaratively by either oc create --save-config or oc apply. The missing annotation will be patched automatically.
imagestream.image.openshift.io/mma-ai configured
Warning: resource services/mma-ai is missing the kubectl.kubernetes.io/last-applied-configuration annotation which is required by oc apply. oc apply should only be used on resources created declaratively by either oc create --save-config or oc apply. The missing annotation will be patched automatically.
service/mma-ai configured
Warning: resource routes/mma-ai is missing the kubectl.kubernetes.io/last-applied-configuration annotation which is required by oc apply. oc apply should only be used on resources created declaratively by either oc create --save-config or oc apply. The missing annotation will be patched automatically.
route.route.openshift.io/mma-ai configured
[cecuser@p1374-bastion llama-runtime]$ oc apply -f mma-ai-deploy.yaml
deployment.apps/mma-ai created
buildconfig.build.openshift.io/mma-ai created
imagestream.image.openshift.io/mma-ai created
service/mma-ai created
route.route.openshift.io/mma-ai created
[cecuser@p1374-bastion llama-runtime]$ cat mma-ai-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: "false"
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/DanielCasali/mma-ai
    deployment.kubernetes.io/revision: "1"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"mma-ai:latest","namespace":"ai"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mma-ai\")].image","paused":"false"}]'
    openshift.io/generated-by: OpenShiftWebConsole
  generation: 1
  labels:
    app: mma-ai
    app.kubernetes.io/component: mma-ai
    app.kubernetes.io/instance: mma-ai
    app.kubernetes.io/name: mma-ai
    app.kubernetes.io/part-of: mma-ai-app
  name: mma-ai
  namespace: ai
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mma-ai
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mma-ai
        deployment: mma-ai
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/ai/mma-ai:latest
          imagePullPolicy: Always
          args: ["-m", "/models/mistral-7b-instruct-v0.3.Q4_K_M.gguf", "--prio", "3", "-c", "4096","-b", "32", "-t", "24", "-n", "-1"]
          name: mma-ai
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: llama-models
              mountPath: /models
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: llama-models
          emptyDir:
            medium: Memory
---
# Service to expose the application internally
apiVersion: v1
kind: Service
metadata:
  name: mma-ai
  namespace: ai
  labels:
    app: mma-ai
    app.kubernetes.io/component: mma-ai
    app.kubernetes.io/instance: mma-ai
    app.kubernetes.io/name: mma-ai
    app.kubernetes.io/part-of: mma-ai-app
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: mma-ai
  type: ClusterIP
---
# Route to expose the service externally
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mma-ai
  namespace: ai
  labels:
    app: mma-ai
    app.kubernetes.io/component: mma-ai
    app.kubernetes.io/instance: mma-ai
    app.kubernetes.io/name: mma-ai
    app.kubernetes.io/part-of: mma-ai-app
spec:
  to:
    kind: Service
    name: mma-ai
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
